--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-provider-upload-custom",
-  "version": "3.0.9",
+  "version": "3.0.10",
   "description": "custom provider for Strapi CMS file upload.",
   "strapi": {
     "isProvider": true
@@ -27,7 +27,8 @@
     "jest": "^24.8.0"
   },
   "dependencies": {
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "slugify": "^1.6.0"
   },
   "scripts": {
     "test": "jest --detectOpenHandles --forceExit --setupFiles dotenv/config",
